Get rid of top actions padding to prevent extra space in messages without actions

--- a/src/sass/messenger.sass
+++ b/src/sass/messenger.sass
@@ -29,8 +29,6 @@
   .message .actions
     float: left
 
-    margin-top: 10px
-
   &.on-right
     right: 20px
     bottom: 5px
